--- a/app/src/main/res/menu/main_menu.xml
+++ b/app/src/main/res/menu/main_menu.xml
@@ -1,12 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
-<menu xmlns:android="http://schemas.android.com/apk/res/android">
-    <group android:checkableBehavior="none">
+<menu xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
     <item
+        android:id="@+id/search_icon"
         android:title="Search"
+        android:icon="@drawable/ic_search"
+        app:showAsAction="ifRoom|withText"
+        app:actionViewClass="android.widget.SearchView"/>
+    <item
+        android:title="Option 1"
         android:id="@+id/search"/>
-    <item android:title="TODO"/>
-    <item android:title="TODO"/>
-    <item android:title="TODO"/>
-    </group>
+    <item android:title="Option 2"/>
+    <item android:title="Option 3"/>
+    <item android:title="Option 4"/>
 
 </menu>
