--- a/app/src/main/res/menu/drawer_view.xml
+++ b/app/src/main/res/menu/drawer_view.xml
@@ -25,6 +25,8 @@
             android:title="About" />
         <item android:id="@+id/nav_item_eight"
             android:title="IIT Bhilai" />
+        <item android:id="@+id/nav_item_nine"
+            android:title="Sign Out" />
     </group>
 
 </menu>
