--- a/app/src/main/res/layout/latest_message_row.xml
+++ b/app/src/main/res/layout/latest_message_row.xml
@@ -24,6 +24,8 @@
         android:layout_marginStart="16dp"
         android:layout_marginBottom="8dp"
         android:text="Name"
+        android:textStyle="bold"
+        android:textSize="16dp"
         app:chainUseRtl="true"
         app:layout_constraintBottom_toTopOf="@+id/textView_latest_message"
         app:layout_constraintStart_toEndOf="@+id/imageView2"
