i initial commit message

--- a/app/src/main/res/layout/nav_header_main.xml
+++ b/app/src/main/res/layout/nav_header_main.xml
@@ -3,7 +3,7 @@
     android:id="@+id/nav_header"
     android:layout_width="match_parent"
     android:layout_height="160dp"
-    android:background="@color/colorAccent"
+    android:background="#6200EE"
     android:clickable="true"
     android:focusable="true"
     android:foreground="?attr/selectableItemBackgroundBorderless"
@@ -26,3 +26,7 @@
         android:text="Alumni Name Goes Here"
         android:textAppearance="@style/TextAppearance.AppCompat.Body1" />
 </LinearLayout>
+
+
+
+
